--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,8 @@
   <section id="contact" class="card">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:zainabsaed1904@gmail.com">zainabsaed1904@gmail.com</a></p>
-    <p>Phone: ‪+92 334 3482404‬</p>
+    <p>linkedin : www.linkedin.com/in/zainab-saeed-3b77692bb
+‬</p>
     <p>Location: Karachi, Pakistan</p>
     <a href="mailto:zainabsaed1904@gmail.com" class="btn">Hire Me</a>
   </section>
@@ -86,4 +87,5 @@
     <p>© 2025 Zainab Saeed. All rights reserved.</p>
   </footer>
 </body>
+
 </html>
