--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     nav a:hover { color: #38bdf8; }
     section { padding: 40px 20px; max-width: 900px; margin: auto; }
     h2 { margin-bottom: 15px; color: #38bdf8; text-align: center; }
-    .card { background: #1e293b; padding: 20px; margin: 20px 0; border-radius: 8px; }
+    .card { background: #536b91; padding: 20px; margin: 20px 0; border-radius: 8px; }
     ul { list-style: none; padding-left: 0; }
     ul li { margin-bottom: 10px; }
     footer { text-align: center; padding: 20px; background: #0f172a; color: #94a3b8; }
@@ -77,8 +77,7 @@
   <section id="contact" class="card">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:zainabsaed1904@gmail.com">zainabsaed1904@gmail.com</a></p>
-    <p>linkedin : www.linkedin.com/in/zainab-saeed-3b77692bb
-‬</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/zainab-saeed-3b77692bb">www.linkedin.com/in/zainab-saeed-3b77692bb</a></p>
     <p>Location: Karachi, Pakistan</p>
     <a href="mailto:zainabsaed1904@gmail.com" class="btn">Hire Me</a>
   </section>
@@ -87,5 +86,4 @@
     <p>© 2025 Zainab Saeed. All rights reserved.</p>
   </footer>
 </body>
-
 </html>
