--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     nav a:hover { color: #38bdf8; }
     section { padding: 40px 20px; max-width: 900px; margin: auto; }
     h2 { margin-bottom: 15px; color: #38bdf8; text-align: center; }
-    .card { background: #536b91; padding: 20px; margin: 20px 0; border-radius: 8px; }
+    .card { background: #536b91; padding: 20px; margin: center; border-radius: 80px; }
     ul { list-style: none; padding-left: 0; }
     ul li { margin-bottom: 10px; }
     footer { text-align: center; padding: 20px; background: #0f172a; color: #94a3b8; }
@@ -25,7 +25,7 @@
 </head>
 <body>
   <header>
-    <h1>👩‍💻 Zainab Saeed</h1>
+    <h1>Zainab Saeed</h1>
     <p>Developer | UI/UX Enthusiast | Computer Science Student</p>
   </header>
 
